Add items home and search to the navbar, give style to the navbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,10 @@
-<p>navbar works!</p>
+<nav class="w-100 bg-dark">
+  <ul>
+    <li class="item-nav">
+      <a routerLink="/home" routerLinkActive="active">Home</a>
+    </li>
+    <li class="item-nav">
+      <a routerLink="/search" routerLinkActive="active">Search</a>
+    </li>
+  </ul>
+</nav>
