--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class="container">
+  <h1 class="text-center">Welcome to the infocountries page</h1>
+  <app-flag></app-flag>
+</div>
+
