Changed flag component in order to be reused

--- a/src/app/components/flag/flag.component.html
+++ b/src/app/components/flag/flag.component.html
@@ -1,15 +1,8 @@
-  <div class="d-flex flex-center">
-    <div *ngIf="isLoading">
-      <p>Loading ...</p>
-    </div>
+<div>
+  <a [routerLink]="['/detail', flag_data.code]">
+    <img [src]= "flag_data.country_flag" [alt]="flag_data.country" [title]="flag_data.country" width="150" height="100" />
+  </a>
+</div>
 
-    <div *ngIf="!isLoading">
-      <div class="flag-arrangement" *ngFor="let item of flag_data">
-        <a class="m-4" [routerLink]="['/detail', item.code]">
-          <img [src]= "item.country_flag" [alt]="item.country" [title]="item.country" width="150" height="100" />
-        </a>
-      </div>
-    </div>
-  </div>
 
 
