--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   margin: 0px 15px;
   padding: 10px;
-  font-size: 20px;
+  font-size: 18px;
 
   a{
     color:white;
@@ -13,6 +13,14 @@
   .active{
     color:orange;
   }
+}
+
+.title{
+  display: inline-block;
+  margin: 0px 15px;
+  padding: 10px;
+  font-size: 36px;
+  color:crimson;
 }
 
 
