--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,3 +1,9 @@
+@import "../../shared/colors.scss";
+
+nav{
+  background-color: $nav-background;
+}
+
 .item-nav{
   display: inline-block;
   margin: 0px 15px;
