--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
 <div class="app-body">
-  <app-navbar></app-navbar>
-
-  <div class="container">
-    <router-outlet></router-outlet>
-  </div>
+  <app-base-component></app-base-component>
 </div>
 
 
