--- a/src/app/shared/colors.scss
+++ b/src/app/shared/colors.scss
@@ -1,3 +1,3 @@
 $nav-background: #212121;
-$body-background: #757575;
-$container-background: #bdbdbd;
+$body-background: #bdbdbd;
+$container-background: #e0e0e0;
