--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -4,3 +4,20 @@
   flex-wrap: wrap;
   justify-content: flex-start;
 }
+
+.btn-random{
+  background-color: #097d0b;
+  border-radius: 10px;
+  padding: 10px;
+  color: white;
+  font-size: 16px;
+  border: transparent;
+}
+
+h1 {
+  font-size: 50px;
+}
+
+p{
+  font-size: 18px;
+}
