Adjust columns and styles

--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -1,6 +1,6 @@
-<div class="d-flex justify-content-center mt-4 row">
-    <div class="col-5 d-flex flex-column flex-nowrap">
-      <img class="flag-border" [src]="country.flag" [alt]="country.name" height="100%" />
+<div class="d-flex justify-content-center row pt-4">
+    <div class="col-5 d-flex justify-content-end">
+      <img [src]="country.flag" [alt]="country.name" height="100%" />
     </div>
     <div class="col-4">
       <table class="table">
