--- a/src/app/pages/detail/detail.component.scss
+++ b/src/app/pages/detail/detail.component.scss
@@ -7,11 +7,8 @@ table td{
 td:first-child{
   font-weight: bold;
 }
-.flag-border{
-  border: black solid 1px;
-}
 
 .table{
   margin-bottom: 0;
-  border: #dee2e6 solid 1px;
+  border-bottom: #6c11ea solid 1px;
 }
