--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="w-100 d-flex justify-content-between align-items-baseline">
+<nav class="w-100 d-flex justify-content-between align-items-baseline" [style.height.px]="NAVBAR_HEIGHT">
   <div>
     <ul>
       <li class="item-nav">
