--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -1,6 +1,10 @@
-<div class="d-flex justify-content-center row pt-4">
-    <div class="col-5 d-flex justify-content-end">
-      <img [src]="country.flag" [alt]="country.name" height="100%" />
+<div class="row py-4 text-center">
+  <h1>Details for {{ country.name}}</h1>
+</div>
+<div class="row">
+  <div class="col-2"></div>
+    <div class="col-4 d-flex justify-content-end">
+      <img class="img-fluid" [src]="country.flag" [alt]="country.name" height="100%" />
     </div>
     <div class="col-4">
       <table class="table">
@@ -12,6 +16,10 @@
           <tr>
             <td>Capital:</td>
             <td>{{ country.capital }}</td>
+          </tr>
+          <tr>
+            <td>{{ country.languages.length > 1 ? "Languages:" : "Language:"}}</td>
+            <td> {{languagesFormated }}</td>
           </tr>
           <tr>
             <td>Population:</td>
@@ -28,10 +36,6 @@
           <tr>
             <td>Subregion:</td>
             <td> {{ country.subregion }}</td>
-          </tr>
-          <tr>
-            <td>Continent:</td>
-            <td> {{ country.continent !== undefined? country.continent : " - " }}</td>
           </tr>
         </tbody>
       </table>
