Footer creation and develop

--- a/src/app/components/base-component/base-component.component.html
+++ b/src/app/components/base-component/base-component.component.html
@@ -1,7 +1,9 @@
 <div>
   <app-navbar></app-navbar>
 
-  <div class="container app-container" [style.min-height.px]="windowHeight">
+  <section class="container app-container" [style.min-height.px]="windowHeight">
     <router-outlet></router-outlet>
-  </div>
-</div>>
+  </section>
+
+  <app-footer></app-footer>
+</div>
