Refactor code and adjust variable names and styles

--- a/src/app/components/base-component/base-component.component.html
+++ b/src/app/components/base-component/base-component.component.html
@@ -1,9 +1,9 @@
 <div>
   <app-navbar></app-navbar>
 
-  <section class="container app-container" [style.min-height.px]="windowHeight">
+  <main class="container app-container" [style.min-height.px]="windowHeight">
     <router-outlet></router-outlet>
-  </section>
+  </main>
 
   <app-footer></app-footer>
 </div>
