--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,6 +10,6 @@
     </ul>
   </div>
   <div>
-    <span class="title">Infocountries</span>
+    <span class="title"><a routerLink="/home">Infocountries</a></span>
   </div>
 </nav>
