--- a/src/app/components/loading/loading.component.html
+++ b/src/app/components/loading/loading.component.html
@@ -1,3 +1,3 @@
-<div class="spinner-border text-primary" role="status">
+<div class="spinner-border text-primary" role="status" [style.marginTop.px]="marginTop">
   <span class="visually-hidden">Loading...</span>
 </div>
