--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -1,44 +1,54 @@
-<div class="row py-4 text-center">
-  <h1>Details for {{ country.name}}</h1>
-</div>
-<div class="row">
-  <div class="col-2"></div>
-    <div class="col-4 d-flex justify-content-end">
-      <img class="img-fluid" [src]="country.flag" [alt]="country.name" height="100%" />
+<section>
+  <ng-container *ngIf="!isLoading else loading">
+    <div class="row py-4 text-center">
+      <h1>Details for {{ country.name}}</h1>
     </div>
-    <div class="col-4">
-      <table class="table">
-        <tbody>
-          <tr>
-            <td class="text-right">Name:</td>
-            <td>{{ country.name }}</td>
-          </tr>
-          <tr>
-            <td>Capital:</td>
-            <td>{{ country.capital }}</td>
-          </tr>
-          <tr>
-            <td>{{ country.languages.length > 1 ? "Languages:" : "Language:"}}</td>
-            <td> {{languagesFormated }}</td>
-          </tr>
-          <tr>
-            <td>Population:</td>
-            <td>{{ country.population | number }} hab</td>
-          </tr>
-          <tr>
-            <td>Area:</td>
-            <td>{{ country.area | number }} km<sup>2</sup></td>
-          </tr>
-          <tr>
-            <td>Region:</td>
-            <td> {{ country.region }}</td>
-          </tr>
-          <tr>
-            <td>Subregion:</td>
-            <td> {{ country.subregion }}</td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="row">
+      <div class="col-2"></div>
+        <div class="col-4 d-flex justify-content-end">
+          <img class="img-fluid" [src]="country.flag" [alt]="country.name" height="100%" />
+        </div>
+        <div class="col-4">
+          <table class="table">
+            <tbody>
+              <tr>
+                <td class="text-right">Name:</td>
+                <td>{{ country.name }}</td>
+              </tr>
+              <tr>
+                <td>Capital:</td>
+                <td>{{ country.capital }}</td>
+              </tr>
+              <tr>
+                <td>{{ country.languages.length > 1 ? "Languages:" : "Language:"}}</td>
+                <td> {{languagesFormated }}</td>
+              </tr>
+              <tr>
+                <td>Population:</td>
+                <td>{{ country.population | number }} hab</td>
+              </tr>
+              <tr>
+                <td>Area:</td>
+                <td>{{ country.area | number }} km<sup>2</sup></td>
+              </tr>
+              <tr>
+                <td>Region:</td>
+                <td> {{ country.region }}</td>
+              </tr>
+              <tr>
+                <td>Subregion:</td>
+                <td> {{ country.subregion }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
     </div>
-</div>
+  </ng-container>
+  <ng-template #loading>
+    <app-loading class="d-flex justify-content-center" *ngIf="isLoading"></app-loading>
+  </ng-template>
+
+</section>
+
+
 
