--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,16 +1,9 @@
-.flag-arrangement{
-  display: inline-flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-}
-
 .btn-random{
-  background-color: #097d0b;
-  border-radius: 10px;
-  padding: 10px;
+  background-color: #346068;
+  border-radius: 15px;
+  padding: 5px 10px;
   color: white;
-  font-size: 16px;
+  font-size: 18px;
   border: transparent;
 }
 
