Developed seach using selectors

--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,20 +1,18 @@
-<div>
-  <div *ngIf="!isLoading">
+<section>
+  <ng-container *ngIf="!isLoading else loading">
     <form  [formGroup]="searchForm">
       <!-- Search -->
       <div class="row">
-        <div class="col-4 my-2">
+        <div class="col-3 my-4 mx-2">
           <div class="form-floating">
-            <input type="text" class="form-control" id="floatingSearch" placeholder="Search" formControlName="name" (keyup)="dataCheck()">
+            <input type="text" class="form-control" id="floatingSearch" placeholder="Search" formControlName="name" (keyup)="search()">
             <label for="floatingSearch">Search</label>
           </div>
         </div>
-      </div>
-      <div class="row mb-3">
         <!-- Region -->
-        <div class="col-4">
+        <div class="col-3 my-4 mx-2">
           <div class="form-floating">
-            <select class="form-select" id="floatingSelectRegion" formControlName="region" (change)="filterCountry()">
+            <select class="form-select" id="floatingSelectRegion" formControlName="region" (change)="filterCountryRegion()">
               <option value= 'all'>All</option>
               <option *ngFor="let region of regionList" [value]="region">{{region}}</option>
             </select>
@@ -22,13 +20,11 @@
           </div>
         </div>
         <!-- Subregion -->
-        <div class="col-4">
+        <div class="col-3 my-4 mx-2">
           <div class="form-floating">
-            <select class="form-select" id="floatingSelectSubRegion" formControlName="subregion">
-              <option selected>East</option>
-              <option value="europe">North</option>
-              <option value="asia">South</option>
-              <option value="america">West</option>
+            <select class="form-select" id="floatingSelectSubRegion" formControlName="subregion" (change)="filterCountrySubRegion()">
+              <option value= 'all'>All</option>
+              <option *ngFor="let subregion of subregionList" [value]="subregion">{{subregion}}</option>
             </select>
             <label for="floatingSelectSubRegion">Subregion</label>
           </div>
@@ -36,7 +32,13 @@
       </div>
     </form>
     <hr />
-    <app-flag *ngFor="let flag of flagList" [flag_data]="flag"></app-flag>
-  </div>
-  <app-loading class="d-flex justify-content-center mt-4" *ngIf="isLoading" [isLoading]="isLoading"></app-loading>
-</div>
+    <div class="d-flex">
+      <div class="flag-arrangement">
+        <app-flag class="m-4" *ngFor="let flag of flagList" [flag_data]="flag"></app-flag>
+      </div>
+    </div>
+  </ng-container>
+  <ng-template #loading>
+    <app-loading class="d-flex justify-content-center"></app-loading>
+  </ng-template>
+</section>
