--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,6 +7,9 @@
       <li class="item-nav">
         <a routerLink="/search" routerLinkActive="active">Search</a>
       </li>
+      <li class="item-nav">
+        <a routerLink="/statistics" routerLinkActive="active">Statistics</a>
+      </li>
     </ul>
   </div>
   <div>
