Give style to some components

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -16,7 +16,7 @@ nav{
   }
 
   .active{
-    color:orange;
+    color:#ff000c;
   }
 }
 
@@ -25,10 +25,10 @@ nav{
   margin: 0px 15px;
   padding: 10px;
   font-size: 36px;
-  color:crimson;
+  color:#0af526;
 
   a{
-    color: crimson;
+    color: #0af526;
     text-decoration: none;
   }
 }
