--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <section>
-  <h1 class="text-center my-3">Welcome to infocountries page</h1>
+  <h1 class="text-center mb-3">Welcome to infocountries page</h1>
 
   <div class="m-3">
     <p>I have created this project to practice on consuming from an API and get deeper knowledge on Angular and the way it works.</p>
