--- a/src/app/shared/colors.scss
+++ b/src/app/shared/colors.scss
@@ -1,3 +1,11 @@
-$nav-background: #212121;
+/* $nav-background: #212121;
 $body-background: #bdbdbd;
 $container-background: #e0e0e0;
+
+$nav-background: #324851;
+$body-background: #34675c;
+$container-background: #7da3a1; */
+
+$nav-background: #2d4262;
+$body-background: #363237;
+$container-background: #f2c057;
