--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,6 @@
   flex-wrap: wrap;
   justify-content: flex-start;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
