--- a/src/app/components/flag/flag.component.scss
+++ b/src/app/components/flag/flag.component.scss
@@ -1,10 +1,55 @@
+$flag-width: 175px;
+$flag-height: 125px;
+$flag-border-radius: 10px;
+
 .flag-style{
-  border-radius: 10px;
-  width: 150px;
-  height: 100px;
-  transition: transform .2s;
+  width: $flag-width;
+  height: $flag-height;
+  border-radius: $flag-border-radius;
 }
 
-.flag-style:hover{
-  transform: scale(1.1);
+
+.flip-card{
+  background-color: transparent;
+  width: $flag-width;
+  height: $flag-height;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: white;
+  border-radius: $flag-border-radius;
+  cursor: pointer;
+}
+
+.flip-card-back {
+  background-color: rgb(255, 110, 25);
+  color: white;
+  border-radius: $flag-border-radius;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  transform: rotateY(180deg);
+  cursor: pointer;
 }
