--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,6 +1,6 @@
 <section>
   <ng-container *ngIf="!isLoading else loading">
-    <form  [formGroup]="searchForm">
+    <form  [formGroup]="searchForm" autocomplete="off">
       <!-- Search -->
       <div class="row">
         <div class="col-3 my-4 mx-2">
