--- a/src/app/components/tables/tables.component.html
+++ b/src/app/components/tables/tables.component.html
@@ -1,1 +1,45 @@
-<p>tables works!</p>
+<div *ngIf="!isLoading else loading">
+  <div class="mat-elevation-z8 m-5">
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of countries">
+    </mat-paginator>
+    <table mat-table [dataSource]="dataSource">
+
+      <ng-container matColumnDef="flag">
+        <th mat-header-cell *matHeaderCellDef> Flag </th>
+        <td mat-cell *matCellDef="let element">
+          <a [routerLink]="['/detail', element.code]">
+            <img role="button" [src]="element.flag" [alt]="element.country" height="25" width="50" />
+          </a>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="country">
+        <th mat-header-cell *matHeaderCellDef> Country </th>
+        <td mat-cell *matCellDef="let element"> {{element.country}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="capital">
+        <th mat-header-cell *matHeaderCellDef> Capital </th>
+        <td mat-cell *matCellDef="let element"> {{element.capital}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="population">
+        <th mat-header-cell *matHeaderCellDef> Population </th>
+        <td mat-cell *matCellDef="let element"> {{element.population | number}} hab. </td>
+      </ng-container>
+
+      <ng-container matColumnDef="area">
+        <th mat-header-cell *matHeaderCellDef> Area </th>
+        <td mat-cell *matCellDef="let element"> {{element.area | number}} Km<sup>2</sup> </td>
+      </ng-container>
+
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
+</div>
+<ng-template #loading>
+  <app-loading class="d-flex justify-content-center"></app-loading>
+</ng-template>
+
