--- a/src/app/pages/statistics/statistics.component.html
+++ b/src/app/pages/statistics/statistics.component.html
@@ -1,1 +1,8 @@
-<p>statistics works!</p>
+<mat-tab-group>
+  <mat-tab label="Table">
+    <app-tables></app-tables>
+  </mat-tab>
+  <mat-tab label="Charts">
+    <app-charts></app-charts>
+  </mat-tab>
+</mat-tab-group>
