Add colors to shared colors and styled detail component

--- a/src/app/shared/colors.scss
+++ b/src/app/shared/colors.scss
@@ -9,3 +9,5 @@ $container-background: #7da3a1; */
 $nav-background: #2d4262;
 $body-background: #363237;
 $container-background: #f2c057;
+$link-active: #f4747a;
+$page-title: #0af526;
