--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -4,37 +4,35 @@
       <h1>Country details</h1>
     </div>
     <div class="row">
-      <div class="col-sm-3 d-flex justify-content-center align-items-center">
-        <button> before </button>
-      </div>
+      <div class="col-sm-3"></div>
       <div class="col-sm-6">
         <div class="card-format my-4">
           <div class="row">
             <span class="country-name text-white">{{ country.name}}</span>
         </div>
           <div class="row">
-            <img height="175" [src]="country.flag" [alt]="country.name"/>
-          </div>
-          <div class="row">
-            <div class="d-flex align-items-end">
-              <span class="title-data">Capital:</span>
-              <span class="content-data">{{ country.capital}}</span>
+            <div class="col-sm-6">
+              <img [src]="country.flag" [alt]="country.name"/>
             </div>
-          </div>
-          <div class="row">
-            <div class="d-flex align-items-end">
+            <div class="col-sm-6 d-flex flex-column ps-3">
+              <div class="d-flex align-items-end">
+                <span class="title-data">Capital:</span>
+                <span class="content-data">{{ country.capital}}</span>
+              </div>
+
+              <div class="d-flex align-items-end">
                 <span class="title-data">Population:</span>
                 <span class="content-data">{{ country.population | number }} hab.</span>
               </div>
-          </div>
-          <div class="row">
-            <div class="d-flex align-items-end">
-              <span class="title-data">Area:</span>
-              <span class="content-data">{{ country.area | number }} km<sup>2</sup></span>
+
+              <div class="d-flex align-items-end">
+                <span class="title-data">Area:</span>
+                <span class="content-data">{{ country.area | number }} km<sup>2</sup></span>
+              </div>
             </div>
           </div>
           <div class="row">
-            <div class="d-flex justify-content-between">
+            <div class="d-flex">
               <div class="d-flex align-items-end">
                 <span class="title-data">Region:</span>
                 <span class="content-data">{{ country.region }}</span>
@@ -53,9 +51,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-3  d-flex justify-content-center align-items-center">
-        <button> After </button>
-      </div>
+      <div class="col-sm-3"></div>
     </div>
   </ng-container>
   <ng-template #loading>
