--- a/src/app/components/tables/tables.component.html
+++ b/src/app/components/tables/tables.component.html
@@ -1,8 +1,7 @@
-<div *ngIf="!isLoading else loading">
-  <div class="mat-elevation-z8 m-5">
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of countries">
+<div class="mat-elevation-z8 m-5">
+    <mat-paginator [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons aria-label="Select page of countries">
     </mat-paginator>
-    <table mat-table [dataSource]="dataSource">
+    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
 
       <ng-container matColumnDef="flag">
         <th mat-header-cell *matHeaderCellDef> Flag </th>
@@ -14,22 +13,22 @@
       </ng-container>
 
       <ng-container matColumnDef="country">
-        <th mat-header-cell *matHeaderCellDef> Country </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by country"> Country </th>
         <td mat-cell *matCellDef="let element"> {{element.country}} </td>
       </ng-container>
 
       <ng-container matColumnDef="capital">
-        <th mat-header-cell *matHeaderCellDef> Capital </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by capital"> Capital </th>
         <td mat-cell *matCellDef="let element"> {{element.capital}} </td>
       </ng-container>
 
       <ng-container matColumnDef="population">
-        <th mat-header-cell *matHeaderCellDef> Population </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by population"> Population </th>
         <td mat-cell *matCellDef="let element"> {{element.population | number}} hab. </td>
       </ng-container>
 
       <ng-container matColumnDef="area">
-        <th mat-header-cell *matHeaderCellDef> Area </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by area"> Area </th>
         <td mat-cell *matCellDef="let element"> {{element.area | number}} Km<sup>2</sup> </td>
       </ng-container>
 
@@ -37,9 +36,4 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-  </div>
 </div>
-<ng-template #loading>
-  <app-loading class="d-flex justify-content-center"></app-loading>
-</ng-template>
-
