Adapt statistics component to call the service and give the data to the components within, adjusted table component to receive data from its parent and to filter by region

--- a/src/app/components/tables/tables.component.html
+++ b/src/app/components/tables/tables.component.html
@@ -1,4 +1,13 @@
 <div class="mat-elevation-z8 m-5">
+    <form [formGroup]="regionSelection">
+      <div class="form-floating">
+        <select class="form-select" id="floatingSelectRegion" formControlName="region">
+          <option value= 'World'>World</option>
+          <option *ngFor="let region of regionList" [value]="region">{{ region }}</option>
+        </select>
+        <label for="floatingSelectRegion">Region</label>
+      </div>
+    </form>
     <mat-paginator [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons aria-label="Select page of countries">
     </mat-paginator>
     <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
