--- a/src/app/pages/statistics/statistics.component.html
+++ b/src/app/pages/statistics/statistics.component.html
@@ -1,8 +1,14 @@
-<mat-tab-group>
-  <mat-tab label="Table">
-    <app-tables></app-tables>
-  </mat-tab>
-  <mat-tab label="Charts">
-    <app-charts></app-charts>
-  </mat-tab>
-</mat-tab-group>
+<ng-container *ngIf="!isLoading else loading">
+  <mat-tab-group>
+    <mat-tab label="Table">
+      <app-tables [countryData]="countryData"></app-tables>
+    </mat-tab>
+    <mat-tab label="Charts">
+      <app-charts [countryData]="countryData"></app-charts>
+    </mat-tab>
+  </mat-tab-group>
+</ng-container>
+<ng-template #loading>
+  <app-loading class="d-flex justify-content-center"></app-loading>
+</ng-template>
+
