Readjust interface ICountry to be used in more components

--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -45,7 +45,7 @@
           </div>
           <div class="row pb-3">
             <div class="d-flex align-items-end">
-              <span class="title-data">{{ country.languages.length > 1 ? "Languages:" : "Language:"}}</span>
+              <span class="title-data">{{ numOfLanguages > 1 ? "Languages:" : "Language:"}}</span>
               <span class="content-data"> {{languagesFormated }}</span>
             </div>
           </div>
