Adjusted loading component style and substitute interface on search component

--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -55,7 +55,7 @@
     </div>
   </ng-container>
   <ng-template #loading>
-    <app-loading class="d-flex justify-content-center" *ngIf="isLoading"></app-loading>
+    <app-loading *ngIf="isLoading"></app-loading>
   </ng-template>
 
 </section>
