--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -41,7 +41,7 @@
     </div>
   </ng-container>
   <ng-template #loading>
-    <app-loading class="d-flex justify-content-center"></app-loading>
+    <app-loading ></app-loading>
   </ng-template>
   <ng-template #noResult>
     <h2 class="d-flex justify-content-center mt-3">No results found</h2>
