--- a/src/app/pages/statistics/statistics.component.html
+++ b/src/app/pages/statistics/statistics.component.html
@@ -9,6 +9,6 @@
   </mat-tab-group>
 </ng-container>
 <ng-template #loading>
-  <app-loading class="d-flex justify-content-center"></app-loading>
+  <app-loading></app-loading>
 </ng-template>
 
