Styled footer and tables components

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,5 @@
 <footer [style.height.px]="footerHeight">
-  <div class="container d-flex justify-content-between align-items-center">
-    <p>Author: Jose Luis Peñuela Berenguer - jpenuelaberenguer@gmail.com</p>
+  <div class="container d-flex justify-content-end align-items-center">
     <p>Powered by: <a href="https://restcountries.com/">restcountries API</a></p>
   </div>
 </footer>
