--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -4,10 +4,9 @@ footer{
   background-color: $nav-background;
   padding: 10px;
     a{
-      color:white;
+      color:$page-title;
       text-decoration: none;
       font-style: italic;
-      font-weight: bold;
     }
 }
 
