--- a/src/app/shared/colors.scss
+++ b/src/app/shared/colors.scss
@@ -1,13 +1,9 @@
-/* $nav-background: #212121;
-$body-background: #bdbdbd;
-$container-background: #e0e0e0;
-
-$nav-background: #324851;
-$body-background: #34675c;
-$container-background: #7da3a1; */
-
 $nav-background: #2d4262;
 $body-background: #363237;
 $container-background: #f2c057;
 $link-active: #f4747a;
 $page-title: #0af526;
+$table-header: #808080;
+$table-even: #C0C0C0;
+$table-odd: #DCDCDC;
+$table-filters-background: #FFFF99;
