--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,6 +14,12 @@
           <a routerLink="/statistics" routerLinkActive="active">Statistics</a>
         </div>
       </li>
+      <li class="item-nav">
+        <div role="button" class="d-flex me5"  (click)="openDialog()">
+            <mat-icon>account_circle</mat-icon>
+            <span> Author</span>
+        </div>
+      </li>
     </ul>
   </div>
   <div>
