--- a/src/app/shared/colors.scss
+++ b/src/app/shared/colors.scss
@@ -1,9 +1,10 @@
 $nav-background: #2d4262;
 $body-background: #363237;
-$container-background: #f2c057;
+$container-background: #83c274;
 $link-active: #f4747a;
-$page-title: #0af526;
+$page-title: #ffd402;
 $table-header: #808080;
 $table-even: #C0C0C0;
 $table-odd: #DCDCDC;
-$table-filters-background: #FFFF99;
+$table-filters-background: #beeeb2;
+$flag-back-color: #375e97;
