--- a/src/app/pages/detail/detail.component.scss
+++ b/src/app/pages/detail/detail.component.scss
@@ -1,5 +1,7 @@
+@import '../../shared/colors.scss';
+
 .card-format{
-  background-color: #68829e;
+  background-color: $flag-back-color;
   border-radius: 25px;
   padding: 0px 15px;
   box-shadow:inset 0px 0px 0px 5px gold;
@@ -16,12 +18,12 @@
 .title-data{
   font-size: 20px;
   font-weight: bold;
-  color: white;
-  padding: 10px
+  color: #c6c6c6;
+  padding: 5px
 }
 
 .content-data{
   font-size: 18px;
-  padding: 10px;
+  padding: 5px;
   color: white;
 }
