Author component creation and developing

--- a/src/app/shared/colors.scss
+++ b/src/app/shared/colors.scss
@@ -7,4 +7,5 @@ $table-header: #808080;
 $table-even: #C0C0C0;
 $table-odd: #DCDCDC;
 $table-filters-background: #beeeb2;
-$flag-back-color: #375e97;
+$author-card-background: #375e97;
+$flag-back-color: $author-card-background;
