--- a/src/app/components/dialog/author/author.component.html
+++ b/src/app/components/dialog/author/author.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="row justify-content-center my-2">
-    <img class="img-author" src="../../../../assets/images/user-icon.png" />
+    <img class="img-author" src="assets/images/user-icon.png" />
   </div>
 
   <div class="row">
@@ -11,10 +11,10 @@
   <div>
     <div class="d-flex justify-content-center my-2">
       <a href="https://www.linkedin.com/in/joseluispenuelaberenguer">
-        <img  height="50px" width="50" src="../../../../assets/images/linkedin.png">
+        <img  height="50px" width="50" src="assets/images/linkedin.png">
       </a>
       <a  href="https://github.com/JoseLuisPB?tab=repositories">
-        <img  height="50px" width="50" src="../../../../assets/images/github.png">
+        <img  height="50px" width="50" src="assets/images/github.png">
       </a>
     </div>
   </div>
