--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -8,26 +8,26 @@
       <div class="col-sm-6">
         <div class="card-format my-4">
           <div class="row">
-            <span class="country-name text-white">{{ country.name}}</span>
+            <span class="country-name text-white">{{ countryData.name.common}}</span>
           </div>
           <div class="row">
             <div class="col-sm-5" style="text-align: center;">
-              <img [src]="country.flag" width="220" [alt]="country.name"/>
+              <img [src]="countryData.flags[1]" width="220" [alt]="countryData.name.common"/>
             </div>
             <div class="col-sm-7 d-flex flex-column ps-3">
               <div class="d-flex align-items-end">
                 <span class="title-data">Capital:</span>
-                <span class="content-data">{{ country.capital}}</span>
+                <span class="content-data">{{ countryData.capital[0]}}</span>
               </div>
 
               <div class="d-flex align-items-end">
                 <span class="title-data">Population:</span>
-                <span class="content-data">{{ country.population | number }} hab.</span>
+                <span class="content-data">{{ countryData.population | number }} hab.</span>
               </div>
 
               <div class="d-flex align-items-end">
                 <span class="title-data">Area:</span>
-                <span class="content-data">{{ country.area | number }} km<sup>2</sup></span>
+                <span class="content-data">{{ countryData.area | number }} km<sup>2</sup></span>
               </div>
             </div>
           </div>
@@ -35,11 +35,11 @@
             <div class="d-flex">
               <div class="d-flex align-items-end">
                 <span class="title-data">Region:</span>
-                <span class="content-data">{{ country.region }}</span>
+                <span class="content-data">{{ countryData.region }}</span>
               </div>
               <div class="d-flex align-items-end">
                 <span class="title-data">Subregion:</span>
-                <span class="content-data">{{ country.subregion }}</span>
+                <span class="content-data">{{ countryData.subregion }}</span>
               </div>
             </div>
           </div>
